--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <title>SWA Assignment 2</title>
+    <title>SWA Assignment 2</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/main.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-
+    <div id="content"></div>
 </body>
 </html>
