--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <title>SWA Assignment 2</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://unpkg.com/imask"></script>
     <script src="js/main.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
